--- a/style.css
+++ b/style.css
@@ -87,9 +87,6 @@ height: 750px;
 border-radius: 20px;
 position: relative;
 background-size: cover;
-
-
-
 }
 @media (max-width: 768px) {
   .background {
@@ -280,7 +277,7 @@ animation: animate 1s  3.5s 1 forwards;
   }
 }
 .data{
-  font-size: 13px;
+  font-size: 11px;
   margin-left:72%;
 }
 @media screen and (max-width: 768px) {
@@ -323,7 +320,7 @@ margin-left: 200px;
 }
 @media screen and (max-width: 768px) {
 .text {
-  font-size: 18px;
+  font-size: 17px;
   line-height:18px;
   margin-top:40px;
   margin-left: 20px;
@@ -353,21 +350,22 @@ font-weight: 400px;
 @media screen and (max-width: 768px) {
 .text2,.text7 {
   font-size:15px;
+  
 }
 }
 .img1{
 margin-top: 40px;
-margin-left: 100px;
+margin-left: 50px;
 
 }
-.all{
-margin-left: 100px;
+ .all{
+margin-left:30px;
 }
 @media screen and (max-width: 768px) {
 .all {
-  margin-left:0px;
+  margin-left:10px;
 }
-}
+} 
 @media screen and (max-width: 768px) {
 .img1 {
   margin-left:30px;
@@ -430,7 +428,7 @@ overflow-x: hidden;
 }
 @media screen and (max-width: 768px) {
 .text5{
-  font-size: 15px;
+  font-size: 11px;
   margin-left: 10px;
 }
 }
@@ -466,7 +464,7 @@ top: 550%;
 }
 @media screen and (max-width: 768px) {
 .family{
-top: 505%; 
+top: 490%; 
 }
 }
 .text6{
@@ -489,13 +487,13 @@ position: relative;
 @media screen and (max-width: 768px) {
 .laugh{
 margin-top: 100px;
-left: -55px;
+left: -10px;
 }
 }
 .beach{
 position: absolute;
 top: 660%;
-left:200px;
+left:100px;
 }
 @media screen and (max-width: 768px) {
 .beach{
@@ -516,6 +514,9 @@ margin-top:200px;
  margin-top: 50px;
 
 }
+}
+.business{
+
 }
 .transform{
 font-family: "Helvetica Neue", "Helvetica Neue", Helvetica, Arial, sans-serif;
