--- a/style.css
+++ b/style.css
@@ -348,14 +348,14 @@ font-weight: 400px;
 }
 }
 @media screen and (max-width: 768px) {
-.text2,.text7 {
-  font-size:15px;
+.text2 {
+  font-size:11px;
   
 }
 }
 .img1{
 margin-top: 40px;
-margin-left: 50px;
+margin-left: 
 
 }
  .all{
@@ -368,7 +368,7 @@ margin-left:30px;
 } 
 @media screen and (max-width: 768px) {
 .img1 {
-  margin-left:30px;
+  margin-left:30px !important;
 }
 }
 .learn{
@@ -464,7 +464,8 @@ top: 550%;
 }
 @media screen and (max-width: 768px) {
 .family{
-top: 490%; 
+top: 490% !important; 
+left: 50px !important;
 }
 }
 .text6{
@@ -482,24 +483,24 @@ font-size: 40px;
 }
 .laugh{
 position: relative;
-
+margin-left: 30px;
 }
 @media screen and (max-width: 768px) {
 .laugh{
 margin-top: 100px;
-left: -10px;
 }
 }
 .beach{
 position: absolute;
 top: 660%;
-left:100px;
+
 }
 @media screen and (max-width: 768px) {
 .beach{
-  top: 630%;
-  left:25px; 
-  width: 400px;   
+  top: 600%;
+  left:150px !important;  
+  width: 400px;
+   
 }
 }
 .text8{
@@ -515,9 +516,7 @@ margin-top:200px;
 
 }
 }
-.business{
 
-}
 .transform{
 font-family: "Helvetica Neue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 font-size: 60px;
@@ -547,6 +546,16 @@ margin-top:200px;
      margin-left: -100px;
     }
     }
+    .express{
+      font-size: 18px;
+font-family: "Helvetica Neue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    }
+    @media screen and (max-width: 768px) {
+      .express{
+        font-size: 13px;
+        
+      }
+      }
 
 
 
