--- a/style.css
+++ b/style.css
@@ -355,7 +355,7 @@ font-weight: 400px;
 }
 .img1{
 margin-top: 40px;
-margin-left:30px !important; 
+
 }
  .all{
 margin-left:30px;
@@ -367,7 +367,9 @@ margin-left:30px;
 } 
 @media screen and (max-width: 768px) {
 .img1 {
-  /* margin-left:-10px !important; */
+   /* padding: 20px; */
+  width: 350px;
+  
 }
 }
 .learn{
@@ -402,6 +404,13 @@ height: 750px;
 width: 100%;
 /* display: flex; */
 /* flex-direction: column; */
+}
+
+@media screen and (max-width: 768px) {
+  .container1{
+    width: 350px;
+    margin-left: 30px;
+  }
 }
 
 .img2{
