--- a/style.css
+++ b/style.css
@@ -369,6 +369,7 @@ margin-left:30px;
 .img1 {
    /* padding: 20px; */
   width: 350px;
+  text-align: center;
   
 }
 }
@@ -460,21 +461,24 @@ margin-top: 250px;
 .wallpaper{
 position: relative;
 margin-top: 100px;
+
 }
 @media screen and (max-width: 768px) {
 .wallpaper{
- /* left: -10px !important;  */
+ text-align: center;
 }
 }
 .family{
 position: absolute;
 top: 550%; 
-}
+
+ }
 @media screen and (max-width: 768px) {
 .family{
-top: 490% !important; 
- left: -10px !important; 
-}
+top: 500% !important; 
+ 
+ 
+} 
 }
 .text6{
 font-family: "Helvetica Neue", "Helvetica Neue", Helvetica, Arial, sans-serif;
