--- a/style.css
+++ b/style.css
@@ -475,7 +475,7 @@ top: 550%;
  }
 @media screen and (max-width: 768px) {
 .family{
-top: 500% !important; 
+top: 510% !important; 
  
  
 } 
@@ -495,25 +495,27 @@ font-size: 40px;
 }
 .laugh{
 position: relative;
-margin-left: 30px;
+
 }
 @media screen and (max-width: 768px) {
 .laugh{
+text-align: center;
 margin-top: 100px;
-margin-left: -30px !important;
 }
 }
 .beach{
 position: absolute;
-top: 655%;
-left: 100px;
+top: 665%;
+left: 150px !important;
+
 
 }
 @media screen and (max-width: 768px) {
 .beach{
-  top: 615%;
-  /* left:150px !important;   */
-  width: 400px;
+  top: 620%;
+  /* left:150px !important;*/
+  width:50px !important;
+ 
    
 }
 }
