--- a/style.css
+++ b/style.css
@@ -369,7 +369,8 @@ margin-left:30px;
 .img1 {
    /* padding: 20px; */
   width: 300px;
-  text-align: center;
+  /* text-align: center; */
+  
   
   
 }
@@ -410,7 +411,7 @@ width: 100%;
 
 @media screen and (max-width: 768px) {
   .container1{
-    width: 350px;
+    width: 320px;
     margin-left: 30px;
     margin-top: 100px;
   }
@@ -472,7 +473,7 @@ margin-top: 100px;
 }
 .family{
 position: absolute;
-top: 560%;
+top: 550%;
  
 
  }
@@ -505,14 +506,14 @@ margin-top: 100px;
 }
 @media screen and (max-width: 768px) {
 .laugh{
-text-align: center;
+width: 50px !important;
 
 }
 }
 .beach{
 position: absolute;
-top: 670%;
-left: 130px !important;
+top: 675%;
+left: 150px !important;
 
 
 }
