--- a/style.css
+++ b/style.css
@@ -320,7 +320,7 @@ margin-left: 200px;
 }
 @media screen and (max-width: 768px) {
 .text {
-  font-size: 18px;
+  font-size: 15px;
   line-height:18px;
   margin-top:40px;
   margin-left: 20px;
@@ -369,7 +369,7 @@ margin-left:30px;
 .img1 {
    /* padding: 20px; */
   width: 300px;
-  /* text-align: center; */
+  text-align: center; 
   
   
   
@@ -411,7 +411,7 @@ width: 100%;
 
 @media screen and (max-width: 768px) {
   .container1{
-    width: 320px;
+    width: 300px;
     margin-left: 30px;
     margin-top: 100px;
   }
@@ -441,7 +441,7 @@ font-family: "Helvetica Neue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 @media screen and (max-width: 768px) {
 .text5{
   font-size: 10px;
-  margin-left: 10px;
+  
 }
 }
 .alltext{
@@ -464,8 +464,12 @@ margin-top: 250px;
 .wallpaper{
 position: relative;
 margin-top: 100px;
-
 }
+@media screen and (max-width: 768px) {
+  .wallpaper{
+  text-align: center;  
+  } 
+  }
 
 .family{
 position: absolute;
@@ -477,9 +481,6 @@ top: 545%;
 .family{
 top: 530% !important;
 width: 100px !important;
-
- 
- 
 } 
 }
 .text6{
@@ -498,25 +499,26 @@ font-size: 40px;
 .laugh{
 position: relative;
 margin-top: 100px;
+text-align: center;
 
 }
 @media screen and (max-width: 768px) {
 .laugh{
-width: 50px !important;
+text-align: center;
 
 }
 }
 .beach{
 position: absolute;
 top: 675%;
-left: 150px !important;
+left: 250px !important;
 
 
 }
 @media screen and (max-width: 768px) {
 .beach{
-  top: 648%;
-  /* left:150px !important;*/
+  top: 655%;
+   left:150px !important;
   
 }
 }
@@ -563,8 +565,8 @@ margin-top:200px;
 
 @media screen and (max-width: 768px) {
     .catalog{
-      margin-left: 60px;
       margin-top: 100px;
+      text-align: center;
      
     }
     }
